# dbus-workbench

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build.sh  mockup-scheme-a-terminal-light.html  package.json  resources.qrc  run-dev.sh  vite.config.ts
dbus-workbench-electron/electron/dbus/: ServiceExplorer.test.ts  ServiceExplorer.ts
dbus-workbench-electron/src/lib/: memberLabel.test.ts  memberLabel.ts
design/: mockup.html
electron/: main.ts  preload.ts
electron/dbus/: BusNameWatcher.ts  RemoteDBusExplorer.ts  RemoteMethodInvoker.ts  RemotePropertyAccessor.ts  ServiceExplorer.test.ts  ServiceExplorer.ts  SignalMonitor.ts  types.ts
electron/ipc/: busWatcher.ts  index.ts  methodInvoker.ts  propertyAccessor.ts  serviceExplorer.ts  ssh.ts  types.ts
electron/ssh/: TunnelManager.ts
qml/: Main.qml  SampleData.js
qml/components/: ActivityRail.qml  BottomPanel.qml  BrowsePane.qml  PanelFrame.qml  ServiceTreePane.qml  Toast.qml  WorkbenchPane.qml
skills/: .skills_store_lock.json
src/: index.css  main.cpp  vite-env.d.ts
src/components/common/: KVRow.tsx  MonitoringCommands.tsx
src/components/explorer/: ServiceTree.tsx  TreeNode.tsx
src/components/layout/: AppShell.tsx  BottomPanel.tsx  Sidebar.tsx  TopBar.tsx
src/components/property/: PropertyPane.tsx
src/components/remote/: ConnectionCard.tsx  ConnectionDialog.tsx  RemoteDrawer.tsx
src/components/service/: InterfacePane.tsx  PathPane.tsx  ServiceOverviewPane.tsx
src/i18n/: index.ts
src/i18n/locales/: en.ts  (+1 more)
src/ipc/: ipcClient.ts
src/stores/: appStore.ts
src/types/: electron-api.ts
(+6 files in other folders)
